feat: update style

--- a/packages/wiki/components/relation-item/index.less
+++ b/packages/wiki/components/relation-item/index.less
@@ -3,10 +3,12 @@
 .row {
   width: 100%;
   span {
-    width: 20%;
+    display: inline-block;
+    width: 10%;
     height: @line-height;
   }
   .value {
+    display: inline-block;
     color: '#1890ff';
     height: @line-height;
   }
