--- a/packages/wiki/components/relation-item/index.less
+++ b/packages/wiki/components/relation-item/index.less
@@ -1,15 +1,15 @@
 @line-height: 17px;
 
-.row {
-  width: 100%;
-  span {
+.relation-item {
+  .name {
     display: inline-block;
-    width: 10%;
+    width: 20%;
     height: @line-height;
   }
   .value {
     display: inline-block;
-    color: '#1890ff';
+    background-color: #1890ff;
     height: @line-height;
+    margin-right: 4px;
   }
 }
