chore: update style

--- a/packages/wiki/pages/wikis/index.less
+++ b/packages/wiki/pages/wikis/index.less
@@ -3,7 +3,9 @@
   margin: auto;
   margin: 8px;
 
-  .relations {
-    margin-top: 10px;
+  .headerbar {
+    display: flex;
+    margin-top: 8px;
+    justify-content: space-around;
   }
 }
