chore: modify wiki style

--- a/packages/wiki/pages/wikis/index.less
+++ b/packages/wiki/pages/wikis/index.less
@@ -1,11 +1,11 @@
 .wiki {
-  max-width: 900px;
   margin: auto;
   margin: 8px;
 
   .headerbar {
     display: flex;
     margin-top: 8px;
-    justify-content: space-around;
+    justify-content: space-between;
+    margin: 0 4px;
   }
 }
