--- a/packages/wiki/pages/wikis/index.less
+++ b/packages/wiki/pages/wikis/index.less
@@ -7,6 +7,12 @@
     margin-top: 8px;
     justify-content: space-between;
     margin: 0 4px;
+
+    h2 {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
 
   .relations-list {
