chore: add lang options

--- a/packages/wiki/pages/wikis/index.less
+++ b/packages/wiki/pages/wikis/index.less
@@ -13,6 +13,16 @@
       overflow: hidden;
       text-overflow: ellipsis;
     }
+
+    .toolbar {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+    }
+
+    .search-bar {
+      margin-left: 12px;
+    }
   }
 
   .relations-list {
