--- a/packages/wiki/pages/index.less
+++ b/packages/wiki/pages/index.less
@@ -14,6 +14,21 @@ code {
 
 .App {
   text-align: center;
+
+  .toolbar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    .search-bar {
+      margin-left: 10px;
+    }
+
+    .lang-picker {
+      width: 82px;
+    }
+  }
 }
 
 .App-logo {
