refactor: refactor search bar

--- a/packages/wiki/components/search-bar/index.less
+++ b/packages/wiki/components/search-bar/index.less
@@ -1,3 +1,16 @@
-.search-bar {
-  max-width: 60%;
+.tool-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  max-width: 70%;
+
+  .search-bar {
+    margin-left: 10px;
+    margin-right: 8px;
+  }
+
+  .lang-picker {
+    width: 65px;
+  }
 }
