--- a/packages/wiki/pages/wikis/index.less
+++ b/packages/wiki/pages/wikis/index.less
@@ -1,10 +1,9 @@
 .wiki {
-  margin: auto;
   margin: 8px;
 
   .headerbar {
+    width: 100%;
     display: flex;
-    margin-top: 8px;
     justify-content: space-between;
     margin: 0 4px;
 
@@ -12,16 +11,6 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-    }
-
-    .toolbar {
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-end;
-    }
-
-    .search-bar {
-      margin-left: 12px;
     }
   }
 
