style(wiki): modify relation item style

--- a/packages/wiki/components/relation-item/index.less
+++ b/packages/wiki/components/relation-item/index.less
@@ -2,13 +2,14 @@
 
 .relation-item {
   cursor: pointer;
+  display: flex;
   .name {
     display: inline-block;
-    width: 30%;
     height: @line-height;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    margin-right: auto;
   }
   .bar {
     display: inline-block;
