feat: use load-more for relation list

--- a/packages/wiki/pages/wikis/index.less
+++ b/packages/wiki/pages/wikis/index.less
@@ -18,6 +18,13 @@
   .relations-list {
     margin-bottom: 8px;
   }
+
+  .load-more {
+    text-align: center;
+    margin-top: 12;
+    height: 32;
+    line-height: 32px;
+  }
 }
 
 @media (min-width: 1024px) {
