--- a/packages/wiki/pages/index.less
+++ b/packages/wiki/pages/index.less
@@ -1,3 +1,5 @@
+@import '../variables.less';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -14,6 +16,9 @@ code {
 
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -22,15 +27,15 @@ code {
   pointer-events: none;
 }
 
-.App-header {
+.App-content {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  flex: 1 1 auto;
 }
 
 .App-link {
