--- a/packages/wiki/pages/index.less
+++ b/packages/wiki/pages/index.less
@@ -15,10 +15,15 @@ code {
 }
 
 .App {
+  background-color: #282c34;
   text-align: center;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+
+  footer {
+    color: white;
+  }
 }
 
 .App-logo {
@@ -28,7 +33,6 @@ code {
 }
 
 .App-content {
-  background-color: #282c34;
   display: flex;
   flex-direction: column;
   align-items: center;
