--- a/packages/wiki/components/footer/index.less
+++ b/packages/wiki/components/footer/index.less
@@ -1,7 +1,7 @@
 @import '../../variables.less';
 
 footer {
-  border-top: 1px solid;
+  border-top: 1px solid rgba(255, 255, 255, .3);
   height: @footer-height;
   flex: 0 0 @footer-height;
   text-align: center;
